# SFMLTemplate

./: CMakeLists.txt  README.md  main.cpp
game/: CMakeLists.txt  game.cpp
game/include/: game.hpp
main/: CMakeLists.txt  main.cpp
